# lmf2txt

./: .gitignore  CMakeLists.txt  LMF_IO.cpp  LMF_IO.h  Makefile  README.md  WriteLMF.cpp  WriteLMF.py  WriteLMF.vcxproj  binder.cpp  binder.h  build.sh  conio.h  lmf2txt.cpp  lmf2txt.py  lmf2txt.vcproj  lmf4py.cpp  pyproject.tomi  requirements.txt  setup.py
data/: Cobold2011R5-2_Header-Template_1TDC8HP.lmf  README.txt
lmfpy/: CMakeLists.txt  LMFReader.cpp  LMFReader.h  LMF_IO.cpp  LMF_IO.h  binder.cpp  binder.h  test.cpp
